--- a/mysql-docker-compose.yml
+++ b/mysql-docker-compose.yml
@@ -1,14 +1,15 @@
 version: "3.7"
 services:
   mysql:
-    image: mysql
+    image: mysql:9.5.0
     container_name: mysql
     restart: always                       # always restart
     environment:
       MYSQL_DATABASE: 'test'              # name of database
-      MYSQL_USER: 'dbeaver'                  # sample is the name of user
+      MYSQL_USER: 'root'                  # sample is the name of user
       MYSQL_PASSWORD: 'root'              # password for sample user
       MYSQL_ROOT_PASSWORD: 'root'         # password for root user
+      TZ: America/Toronto
     ports:
       - '3306:3306'                       # host port 3306 is mapper to docker port 3306
     expose:
